tests/reject/vtMutateArgument.emojic
🕊 🌼 🍇
  🍰 text 🔡

  🐈 🆕 🍼 text 🔡 🍇🍉

  🐖 🌵 🍇
    😀 text
  🍉

  🖍 🐖 😣 🍇
    🍮 text 🔤Rabzmw🔤
  🍉

  🐇🐖 🙃 x 🌼 🍇
    😣 x
  🍉
🍉

🏁 🍇
  🍦 s 🔷🌼🆕 🔤Discovery🔤
  🌵 s
  🍩🙃🌼 s
🍉
